--- a/menu.html
+++ b/menu.html
@@ -100,9 +100,9 @@
       <div class="accordion__content">
         <p>Выберите работу</p>
         <p>
-          <button class="work" work="ВСО ВУЗ 23: ТЕСТЫ">Тесты</button>
-          <button class="work" work="ВСО ВУЗ 23: ЗАДАЧИ">Задачи</button>
-          <button class="work" work="ВСО ВУЗ 23: ДЕКЛАРАЦИЯ">Декларация</button>
+          <button class="work" id="dcl" work="ВСО ВУЗ 23: ДЕКЛАРАЦИЯ">Декларация</button>
+          <button class="work" id="tst" work="ВСО ВУЗ 23: ТЕСТЫ">Тесты</button>
+          <button class="work" id="cas" work="ВСО ВУЗ 23: ЗАДАЧИ">Задачи</button>
         </p>
       </div>
     </div>
