--- a/menu.html
+++ b/menu.html
@@ -16,9 +16,14 @@
   <div class="eventName">
     <h1 id="greeting"></h1>
     <h3>
-      <br>Приветствуем Вас </br>
+      <!-- <br>Приветствуем Вас </br>
       <br>на Всероссийской олимпиаде</br>
-      <br>по специальности "Таможенное дело"</br>
+      <br>по специальности "Таможенное дело"</br> -->
+      <br>Спасибо за участие в Олимпиаде! </br>
+      <br>Нажмите на "ВЫПОЛНЕНО" и подождите пару секунд</br>
+      <br>Ошибки подгрузятся в работу тоже через пару секунд</br>
+      <br>При наведении на поле, показывается правильная запись. Для "правильных" полей в задачах показывается также стоимость поля в скобках</br>
+      <br>Некоторые "неправильные" поля были засчитаны по смыслу и для Вас не отражаются. Подробнее - обращайтесь к жюри!</br>
     </h3>
   </div>
   <div class="cont">
