--- a/menu.html
+++ b/menu.html
@@ -20,10 +20,10 @@
       <br>на Всероссийской олимпиаде</br>
       <br>по специальности "Таможенное дело"</br> -->
       <br>Спасибо за участие в Олимпиаде! </br>
-      <br>Нажмите на "ВЫПОЛНЕНО" и подождите пару секунд</br>
-      <br>Ошибки подгрузятся в работу тоже через пару секунд</br>
-      <br>При наведении на поле, показывается правильная запись. Для "правильных" полей в задачах показывается также стоимость поля в скобках</br>
-      <br>Некоторые "неправильные" поля были засчитаны по смыслу и для Вас не отражаются. Подробнее - обращайтесь к жюри!</br>
+      <br>1. Нажмите на "ВЫПОЛНЕНО" и дождитесь подгрузки работ.</br>
+      <br>2. Выберите "ОБЗОР" в таблице и дождитесь подгрузки результатов.</br>
+      <br>3. Некоторые "неправильные" поля в задачах и декларации были засчитаны по смыслу. "ОЦЕНКА" в таблице указана с учетом таких полей.</br>
+      <br>4. Подробнее - обращайтесь к жюри!</br>
     </h3>
   </div>
   <div class="cont">
