--- a/TS/case23vuz.html
+++ b/TS/case23vuz.html
@@ -315,9 +315,9 @@
                                         class="material-symbols-outlined">auto_stories</span>ТКЕАЭС</a></div>
                             <div class="classification"><a data-nm="customsDocNt" target="_blank"><span
                                         class="material-symbols-outlined">auto_stories</span>289-ФЗ</a></div>
-                            <div class="classification"><a data-nm="exdutiesDoc1" arget="_blank"><span class="material-symbols-outlined">auto_stories</span>ППРФ
+                            <div class="classification"><a data-nm="exdutiesDoc1" target="_blank"><span class="material-symbols-outlined">auto_stories</span>ППРФ
                                     2068</a></div>
-                            <div class="classification"><a data-nm="exdutiesDoc2" arget="_blank"><span class="material-symbols-outlined">auto_stories</span>ППРФ
+                            <div class="classification"><a data-nm="exdutiesDoc2" target="_blank"><span class="material-symbols-outlined">auto_stories</span>ППРФ
                                 1538</a></div>
                             <div class="classification"><a data-nm="ttrDocNt" target="_blank"><span class="material-symbols-outlined">auto_stories</span>ЗАКОН
                                     5003-1</a></div>
@@ -640,7 +640,7 @@
                                         class="material-symbols-outlined">auto_stories</span>289-ФЗ</a></div>
                             <div class="classification"><a data-nm="decision160" target="_blank"><span class="material-symbols-outlined">auto_stories</span>РЕШЕНИЕ
                                     ЕЭК 160</a></div>
-                            <div class="classification"><a data-nm="direct152" arget="_blank"><span class="material-symbols-outlined">auto_stories</span>ПРИКАЗ
+                            <div class="classification"><a data-nm="direct152" target="_blank"><span class="material-symbols-outlined">auto_stories</span>ПРИКАЗ
                                     ФТС РФ 152</a></div>
                             <div class="classification"><a data-nm="incotermsClass" target="_blank"><span class="material-symbols-outlined">auto_stories</span>ИНКОТЕРМС</a></div>
                             </p>
