--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
-<body onload="">
+<body onload="getTransfering()">
   <!-- getTransfering() -->
 
   <div class="eventName">
