--- a/DT/declarationvsoKoffeemachine.html
+++ b/DT/declarationvsoKoffeemachine.html
@@ -1,61 +1,58 @@
-Заполнить таможенную декларацию на выпуск для внутреннего потребления
-
-Товар
-1: БЫТОВОЕ ЭЛЕКТРОНАГРЕВАТЕЛЬНОЕ УСТРОЙСТВО ДЛЯ ПРИГОТОВЛЕНИЯ КОФЕ - КОФЕМАШИНЫ БЫТОВЫЕ ЭЛЕКТРИЧЕСКИЕ АВТОМАТИЧЕСКИЕ PHILIPS, ПОМПОВЫЕ (ДАВЛЕНИЕ ПОМПЫ 15БАР), МОЩНОСТЬЮ 1850ВТ, МАТЕРИАЛ КОРПУСА - ПЛАСТИК, МАТЕРИАЛ ЖЕРНОВОВ - КЕРАМИКА, ТИП КОФЕ - МОЛОТЫЙ/В ЗЕРНАХ, ДЛЯ ПРИГОТОВЛЕНИЯ 2-Х ЧАШЕК. МОДЕЛЬ: 5000, ТИПЫ EP5030, EP5034, EP5035, EP5040, EP5045, EP5331. СЕРИЙНЫЙ ВЫПУСК. РАЗМЕР: 34*22*43 СМ., АРТИКУЛ: ОТСУТСТВУЕТ
-ИЗГОТОВИТЕЛЬ: PHILIPS ORASTIE S.R.L., STR. LUNCII, 18, 335700 ORASTIE, ROMANIA
-ТОРГОВАЯ МАРКА: PHILIPS
-ТНВЭД 8516710000
-2: СОКОВЫЖИМАЛКИ ЭЛЕКТРИЧЕСКИЕ, ЦЕНТРОБЕЖНЫЕ, ТОРГОВОЕ НАИМЕНОВАНИЕ Philips HR1919/70, УПРАВЛЕНИЕ МЕХАНИЧЕСКОЕ, ПОТРЕБЛЯЕМАЯ МОЩНОСТЬ 1000 ВТ, МАТЕРИАЛ КОРПУСА ПЛАСТИК, СТЕНКА ЦЕНТРИФУГИ - СТАЛЬ, ДВЕ СКОРОСТИ РАБОТЫ, В ИНДИВИДУАЛЬНОЙ УПАКОВКЕ (КАРТ. КОРОБКА). МОДЕЛЬ: PHILIPS HR1919/70, СЕРИЙНЫЙ ВЫПУСК. РАЗМЕР: 34*22*43 СМ. АРТИКУЛ: ОТСУТСТВУЕТ
-ИЗГОТОВИТЕЛЬ: HAI XIN TECHNOLOGY (SHENZHEN) COMPANY LIMITED, CHINA
-ТОРГОВАЯ МАРКА: PHILIPS
-ТНВЭД 8509 40 000 0
-
-Кол-во и упаковка
-1: 2120 кофемашин по 7,6 кг каждая. Каждая кофемашина в отдельной упаковке - картонная коробка. Коробки размещены на поддонах деревянных 800*1200СМ в количестве 12 коробок/поддон. Всего поддонов: 168. Каждая коробка = 450 грамм. Индивидуальная розничная упаковка - картонная коробка.
-2: 1200 соковыжималок по 4,4 кг каждая. Каждая соковыжималка в отдельной упаковке - картонная коробка. Коробки размещены на поддонах деревянных 800*1200СМ в количестве 8 коробок/поддон. Всего поддонов: 151. Каждая коробка = 400 грамм.
+<p>ТОВАР
+<br>
+1: Бытовое электронагревательное устройство для приготовления кофе - кофемашины бытовые электрические автоматические Philips, помповые (давление помпы 15бар), мощностью 1850вт, материал корпуса - пластик, материал жерновов - керамика, тип кофе - молотый/в зернах, для приготовления 2-х чашек. модель: 5000, типы ep5030, ep5034, ep5035, ep5040, ep5045, ep5331. Серийный выпуск. Размер: 34*22*43 см., артикул: отсутствует, изготовитель: Philips Orastie s.r.l., str. Luncii, 18, 335700 Orastie, Romania. Торговая марка: Philips
+<br>
+2: Соковыжималки электрические, центробежные, торговое наименование Philips hr1919/70, управление механическое, потребляемая мощность 1000 вт, материал корпуса пластик, стенка центрифуги - сталь, две скорости работы, в индивидуальной упаковке (карт. коробка). Модель: Philips hr1919/70, серийный выпуск. Размер: 34*22*43 см. Артикул: отсутствует. Изготовитель: Hai Xin Technology (Shenzhen) Company Limited, China. Торговая марка: Philips
+</br>
+<p>МЕСТА И УПАКОВКА
+<br>
+  1: 2120 кофемашин по 7,6 кг каждая. Каждая кофемашина в отдельной упаковке - картонная коробка. Коробки размещены на поддонах деревянных 800*1200СМ в количестве 12 коробок/поддон. Всего поддонов: 168. Каждая коробка = 450 грамм. Индивидуальная розничная упаковка - картонная коробка.
+<br>
+  2: 1200 соковыжималок по 4,4 кг каждая. Каждая соковыжималка в отдельной упаковке - картонная коробка. Коробки размещены на поддонах деревянных 800*1200СМ в количестве 8 коробок/поддон. Всего поддонов: 151. Каждая коробка = 400 грамм.
 Индивидуальная розничная упаковка - картонная коробка.
+</p>
+<p>ЛОГИСТИКА
+<li>Авто-Авиа-Авто
+<br>Drachten-Warsaw, 02-GFJ-1/17MGJJ; 02-GFJ-2/27MGJJ; 01-GDJ-1/89MGFJ; 09-FRT-1/78RGJJ (Нидерланды) <br>Warsaw-Moscow, два рейса(судна): LO-685 И LO-785 (Польша)
+<br>Москва-Ханты-Мансийск, А458КЕ77/АЕ2234; А458КЕ77/АЕ2895; А458КЕ77/АЕ8975 (Россия)
+<li>Таможенный орган прибытия: т/п Аэропорт Шереметьево (грузовой). Оформление и выпуск товаров в Сургутском таможенном посту Тюменской таможни Уральского таможенного управления.
+<li>Место нахождения товаров: СВХ 10503/081210/20017/5 по адресу 628415, ХМАО-Югра, г. Сургут, ул. Индустриальная 56.
+<li>Условие поставки: DAT т/п Аэропорт Шереметьево (грузовой)
+</p>
 
-Логистика
-1. АВТО: DRACHTEN -WARSAW, 02-GFJ-1/17MGJJ; 02-GFJ-2/27MGJJ; 01-GDJ-1/89MGFJ; 09-FRT-1/78RGJJ (НИДЕРЛАНДСКИЕ ТРАНСПОРТНЫЕ СРЕДСТВА)
-АВИА: WARSAW-MOSCOW. ДВА РЕЙСА(СУДНА): LO-685 И LO-785 (ПОЛЬСКИЕ ТРАНСПОРТНЫЕ СРЕДСТВА)
-АВТО: МОСКВА-ХАНТЫ-МАНСИЙСК, А458КЕ77/АЕ2234; А458КЕ77/АЕ2895; А458КЕ77/АЕ8975
-2. Таможенный орган прибытия: т/п Аэропорт Шереметьево (грузовой). Оформление и выпуск товаров в Сургутском таможенном посту Тюменской таможни Уральского таможенного управления.
-3. Место нахождения товаров: СВХ 10503/081210/20017/5 по адресу 628415, ХМАО-Югра, Тюменская область, г. Сургут, ул. Индустриальная 56.
-4. Условие поставки: DAT т/п Аэропорт Шереметьево (грузовой)
+<p>СТОИМОСТЬ
+<br>1: Контрактная цена за 1 кофемашина = 298,47 евро.Контрактная = Таможенная = Статистическая.
+<br>2: Контрактная цена за 1 соковыжималка = 123,28 евро. Контрактная = Таможенная = Статистическая.
+</p>
 
-Стоимость
-1: Контрактная цена за 1 кофемашина = 298,47 евро.
-Контрактная = Таможенная = Статистическая.
-2: Контрактная цена за 1 соковыжималка = 123,28 евро
-Контрактная = Таможенная = Статистическая.
+<p>КОНТРАКТ
+<br>Отправитель/Продавец: Philips Consumer Lifestyle B.V., Tussendiepen 4, 9206 AD Drachten, Netherlands; info@philips.com; +31(5856)521587
+<br>Покупатель/Получатель: ООО "Филипс и К", Россия, 628615, Ханты-Мансийский Автономный Округ - ЮГРА, г.Нижневартовск, ул.Северная, д.48, офис 210; ИНН/КПП 8603002210/860301001; ОГРН 1118603008303 ОТ 27.07.2011; info@philips-k.com; 89044896678
+</p>
 
-Контракт
-Отправитель/Продавец: PHILIPS CONSUMER LIFESTYLE B.V., TUSSENDIEPEN 4, 9206 AD DRACHTEN, NETHERLANDS; INFO@PHILIPS.COM; +31(5856)521587
-Покупатель/Получатель: ООО "ФИЛИПС И К", РОССИЯ, 628615, ХАНТЫ-МАНСИЙСКИЙ АВТОНОМНЫЙ ОКРУГ - ЮГРА, Г.НИЖНЕВАРТОВСК, УЛ.СЕВЕРНАЯ, Д.48, ОФИС 210; ИНН/КПП 8603002210/860301001; ОГРН 1118603008303 ОТ 27.07.2011; INFO@PHILIPS-K.COM; 89044896678
+<p>ДОКУМЕНТЫ ОБЩИЕ
+<li>Авианакладная 83569589657 от 02.09.2020
+<li>Международная накладная CMR 2232873 от 06.08.2020
+<li>Договор купли-продажи (контракт) 25/07/19/RU от 25.07.2019
+<li>Доп.соглашение к договору купли-продажи 25/07/19/RU-1 от 29.07.2019
+<li>Уник. номер контракта 55569585/8989/7878/1/7 от 15.12.2019
+<li>Инвойс к договору купли-продажи INV-S000123 от 02.09.2020
+<li>Инвойс за погрузку-разгрузку в аэропорту 7 от 06.09.2020
+<li>Документ, подтверждающий право на ОИС 1456 ОТ 10.06.2020
+<li>Рег.номер уведомления о размещении товаров в зтк ГРГР-00000587 от 06.09.2020
+<li>Паспорт РФ 0709 896548 от 05.02.2009
+<li>Доверенность 456 от 23.05.2017 ДО 23.05.2022
+<li>Транзитная декларация 10005020/120919/0001115
 
-Общие документы
-АВИАНАКЛАДНАЯ 83569589657 от 02.09.2020
-МЕЖДУНАРОДНАЯ ТОВАРНО-ТРАНСПОРТНАЯ НАКЛАДНАЯ CMR 2232873 от 06.08.2020
-ДОГОВОР КУПЛИ-ПРОДАЖИ (КОНТРАКТ) 25/07/19/RU от 25.07.2019
-ДОП.СОГЛАШЕНИЕ К ДОГОВОРУ КУПЛИ-ПРОДАЖИ 25/07/19/RU-1 от 29.07.2019
-УНИК. НОМЕР КОНТРАКТА, ПРИСВОЕННЫЙ БАНКОМ ДЕКЛАРАНТА 55569585/8989/7878/1/7 от 15.12.2019
-ИНВОЙС К ДОГОВОРУ КУПЛИ-ПРОДАЖИ INV-S000123 от 02.09.2020
-ИНВОЙС ЗА ПОГРУЗКУ-РАЗГРУЗКУ В АЭРОПОРТУ СПБ 7 от 06.09.2020
-ДОКУМЕНТ, ПОДТВЕРЖДАЮЩИЙ ПРАВО НА ОИС 1456 ОТ 10.06.2020
-РЕГ.НОМЕР УВЕДОМЛЕНИЯ О РАЗМЕЩЕНИИ ТОВАРОВ В ЗТК ГРГР-00000587 от 06.09.2020
-ПАСПОРТ РФ 0709 896548 от 05.02.2009
-ДОВЕРЕННОСТЬ 456 от 23.05.2017 ДО 23.05.2022
-ТРАНЗИТНАЯ ДЕКЛАРАЦИЯ 10005020/120919/0001115
+<p>ДОКУМЕНТЫ НА ТОВАР1
+<li>Сертификат соответствия техническим регламентам ЕАЭС: ЕАЭС RU С-DE.АП02.В.06430/17 от 03.08.2018-02.08.2023
+<li>Свидетельство о государственной регистрации RU.25.АЯ.08.859.Е.000001.32.25 ОТ 02.09.2020
+<li>Лицензия на экспорт/импорт 001RU52695478541 от 02.09.2020 ДО 02.09.2021
+<li>Предварительное решение о классификации товара RU/10505000/020719/8952/69 от 02.08.2020
+<li>Сертификат происхождения, выданный в Румынии 00011/11 от 06.08.2020
 
-Документы к товару 1
-СЕРТИФИКАТ СООТВЕТСТВИЯ ТЕХНИЧЕСКИМ РЕГЛАМЕНТАМ ЕАЭС: ЕАЭС RU С-DE.АП02.В.06430/17 от 03.08.2018-02.08.2023
-СВИДЕТЕЛЬСТВО О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ RU.25.АЯ.08.859.Е.000001.32.25 ОТ 02.09.2020
-ЛИЦЕНЗИЯ НА ЭКСПОРТ/ИМПОРТ 001RU52695478541 от 02.09.2020 ДО 02.09.2021
-ПРЕДВАРИТЕЛЬНОЕ РЕШЕНИЕ О КЛАССИФИКАЦИИ ТОВАРА RU/10505000/020719/8952/69 от 02.08.2020
-СЕРТИФИКАТ ПРОИСХОЖДЕНИЯ, ВЫДАННЫЙ В РУМЫНИИ 00011/11 от 06.08.2020
-
-Документы к товару 2
-СЕРТИФИКАТ СООТВЕТСТВИЯ ТЕХНИЧЕСКИМ РЕГЛАМЕНТАМ ЕАЭС: ЕАЭС RU С-DE.АП02.В.06430/18 от 03.08.2018-02.08.2023
-СЕРТИФИКАТ ПРОИСХОЖДЕНИЯ, ВЫДАННЫЙ В КИТАЕ 00028/08 от 29.08.2020
-ЛИЦЕНЗИЯ НА ЭКСПОРТ/ИМПОРТ 001RU54789369658 от 03.09.2020 ДО 03.09.2021
-СВИДЕТЕЛЬСТВО О ГОСУДАРСТВЕННОЙ РЕГИСТРАЦИИ RU.25.АЯ.08.859.Е.000001.32.26 ОТ 28.08.2020
+<p>ДОКУМЕНТЫ НА ТОВАР2
+<li>Сертификат соответствия техническим регламентам ЕАЭС: ЕАЭС RU С-DE.АП02.В.06430/18 от 03.08.2018-02.08.2023
+<li>Сертификат происхождения, выданный в Китае 00028/08 от 29.08.2020
+<li>Лицензия на экспорт/импорт 001RU54789369658 от 03.09.2020 ДО 03.09.2021
+<li>Свидетельство о государственной регистрации RU.25.АЯ.08.859.Е.000001.32.26 ОТ 28.08.2020
