--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
     </div>
     <div class="accordion"></div>
     <label for="" class="copyright">&copy;Разработка: Амандурдыев Х.Д.</label>
-    <script src="scripts/login.js"></script>
+    <script src="scripts/loginv2.js"></script>
 </body>
